# shortlist

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKERHUB_README.md  Dockerfile  LICENSE  README.md  ca_profile.xml  docker-compose.example.yml  llms.txt  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: architecture-review.md
.claude/docs/: rowarr-architecture.md  rowarr-collections-design.md  rowarr-design.md  shortlist-architecture.md  shortlist-collections-design.md  shortlist-design.md
.claude/rules/: commenting.md  docker.md  docs.md  frontend.md  plex-safety.md  python.md  shell.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-pr-cleanup.yml  docker.yml
docker/: entrypoint.sh
docs/: README.md  faq.md  getting-started.md  guides.md  reference.md
rowarr/: __init__.py  cli.py  logging_config.py
rowarr/engine/: __init__.py  candidates.py  delivery.py  history.py  models.py  pipeline.py  privacy.py  probe.py  ranking.py  requests.py  rows.py  verify.py
rowarr/server/: __init__.py  auth.py  main.py  scheduler.py  settings_store.py
scripts/: deploy.sh  eval_web_search.py  live_dryrun.py
shortlist/: __init__.py  logging_config.py
shortlist/engine/: __init__.py  candidates.py  delivery.py  history.py  models.py  pipeline.py  privacy.py  ranking.py  requests.py  rows.py
shortlist/server/: auth.py  main.py  notifications.py  scheduler.py  settings_store.py
tests/: conftest.py
tests/e2e/: conftest.py  test_app_e2e.py  test_collections_e2e.py  test_login_e2e.py  test_privacy_uninstall_e2e.py  test_screenshots.py  test_settings_e2e.py  test_users_runs_e2e.py  test_wizard_e2e.py
tests/fakes/: fake_plex.py  file_stores.py
tests/fixtures/: README.md  plextv_users.xml  plextv_users.xml.txt  pms_accounts.xml.txt  pms_hubs_home.json  pms_library_schema.sql
tests/integration/: test_api.py  test_engine_vs_fake.py  test_migration_recovery.py  test_requests_api.py
tests/unit/: test_arr.py  test_auth_gate.py  test_auth_rate_limit.py  test_bugfixes.py  test_candidates.py  test_cli.py  test_clients.py  test_curator.py  test_delivery.py  test_file_stores.py  (+27 more)
unraid-templates/: rowarr.xml  shortlist.xml
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+247 files in other folders)
