[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shortlist"
description = "A private, AI-curated 'Picked for You' row for every user on your Plex server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dynamic = ["version"]
authors = [{ name = "Steven Adams" }]
keywords = ["plex", "recommendations", "self-hosted", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "plexapi>=4.17",
    "httpx>=0.27",
    "loguru>=0.7",
    "pydantic>=2.7",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10,<4",
    "itsdangerous>=2.1",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
google = ["google-genai>=1.0"]
posters = ["pillow>=10.0"]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "respx>=0.21",
    "playwright>=1.45",
    "pillow>=10.0",  # so the poster text-renderer + upload-normalization tests run in CI

    # Local commit guard: runs the same ruff check + ruff format CI enforces, so a format slip is
    # caught at `git commit`, not in GitHub. Activate once per clone with `pre-commit install`.
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/stevezau/shortlist"
Issues = "https://github.com/stevezau/shortlist/issues"

[tool.hatch.version]
path = "shortlist/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["shortlist"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["shortlist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# e2e needs a built SPA + a browser; it runs in its own CI job via `pytest -m e2e`.
addopts = "-n auto -m 'not e2e' --cov=shortlist --cov-report=term-missing"
markers = [
    "integration: crosses module boundaries",
    "plex: requires a real Plex server (skipped in CI)",
    "slow: long-running",
    "e2e: Playwright vs built image + fake_plex",
]

[tool.coverage.report]
fail_under = 80
